omg fix the stupid alignment bug

--- a/src/Results.css
+++ b/src/Results.css
@@ -38,7 +38,8 @@
   position: absolute;
   right: 1%;
   top: 4%;
-  width: 40%;
+  width: 100%;
+  height: 100%;
   animation: ticketEnter 0.5s ease-out;
   animation-delay: 1s;
   animation-fill-mode: both;
@@ -47,6 +48,9 @@
 .ticket-wobble-animation {
   animation: ticketWobble 3s ease-in-out infinite;
   animation-delay: 0.6s;
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 
 @keyframes ticketEnter {
@@ -83,18 +87,23 @@
 
 .ticket-outer {
   transform: rotate(4deg);
+  width: 40%;
+  right: 1%;
+  position: absolute;
 }
 
-.ticket-outer > p {
+#percentage-results {
   color: #c20f2f;
   position: absolute;
-  bottom: 58%;
-  right: -29%;
-  width: 100px;
-  font-size: 184%;
+  top: 14%;
+  right: -23%;
+  z-index: 1;
+  width: 30%;
+  text-align: left;
+  font-size: 143%;
   font-family: monospace;
   transform-origin: bottom left;
-  transform: rotate(270deg);
+  transform: rotate(274deg);
 }
 
 .ticket-outer > img {
